--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ button.compre_agora {
     height: 89px;
     left: 315px;
     top: 560px;
-    background: #CFBCD8;
+    background: #ffa2da;
     border-radius: 64.5px;
     font-family: 'Josefin Slab';
     font-style: normal;
