--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    display: none; /* mudou isso */
 }
 
 .menu_vertical li {
@@ -59,14 +60,14 @@ a {
 
 .menu_vertical li:hover {
     text-decoration: underline;
-    background-color: #CFBCD8;
+    background-color: #ffa2da;
 }
 
 nav.opcoes {
     position: absolute;
     width: 317px;
     height: 415px;
-    left: 1016px;
+    left: 1100px;
     top: 399px;
     line-height: 45px;
 }
@@ -127,3 +128,113 @@ img.segunda {
     transform: rotate(176.57deg);
 }
 
+@media (min-width: 150px) and (max-width: 732px) {
+    
+    nav.opcoes {
+        position: absolute;
+        left: 330px;
+        top: 100px;
+        opacity: 1; /* MENU */
+    }
+
+    div.mq {
+        position: absolute;
+        left: -100px;
+    }
+    img.primeira {
+        opacity: 0;
+    }
+    img.segunda {
+        opacity: 0;
+    }
+
+    .menu_toggle {
+        position: absolute;
+        top: 50px;
+        left: 369px;
+    }
+
+    /* .menu_toggle {
+        position: absolute;
+        top: 50px;
+        left: 120px;
+    } */
+
+
+}
+
+@media (min-width: 733px) and (max-width: 1158px) {
+    nav.opcoes {
+        position: absolute;
+        left: 450px;
+        top: 100px;
+    }
+    img.primeira {
+        opacity: 0;
+    }
+    img.segunda {
+        opacity: 0;
+    }
+
+    .menu_toggle {
+        position: absolute;
+        top: 45px;
+        left: 595px;
+    }
+}
+
+@media (min-width: 1159px) {
+    
+    .menu_toggle {
+        position: absolute;
+        top: 409px;
+        left: 1050px;
+    }
+}
+
+/* MENU TOGGLE */
+
+#toggle {
+    width: 28px;
+    height: 30px;
+    margin: 10px auto;
+  }
+
+  #toggle div {
+    width: 100%;
+    height: 5px;
+    background: black;
+    margin: 4px auto;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+    
+  }
+  
+  #toggle.on .one {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+  
+  #toggle.on .two {
+    opacity: 0;
+  }
+  
+  #toggle.on .three {
+    transform: rotate(-45deg) translate(7px, -8px);
+  }
+  
+  /* CONTEUDO DO MENU - P 
+
+  #menu {
+    color: black;
+    border: 1px solid black;
+    width: 150px;
+    height: 100px;
+    padding: 10px;
+    border-radius: 3px;
+    line-height: 25px;
+    text-align: center;
+    margin: auto;
+    display: none;
+  }
+
+  */
